--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,3 +215,85 @@
   margin: 1% 1%;
 }
 /* ############################# */
+
+/* Cookies */
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f0e68c;
+  font-family: Arial, sans-serif;
+}
+
+.fortune-cookie {
+  position: relative;
+  width: 200px;
+  height: 100px;
+  cursor: pointer;
+}
+
+.cookie-left {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: #d2691e;
+  border-radius: 50% 0 0 50%;
+  transition: transform 0.5s, left 0.5s;
+  box-shadow: inset -10px 0 0 -5px #8b4513, inset -20px 0 0 -10px #a0522d;
+}
+
+.cookie-right {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: #d2691e;
+  border-radius: 50% 0 0 50%;
+  transition: transform 0.5s, left 0.5s;
+  box-shadow: inset -10px 0 0 -5px #8b4513, inset -20px 0 0 -10px #a0522d;
+}
+
+.cookie-right {
+  left: 100px;
+  border-radius: 0 50% 50% 0;
+  box-shadow: inset 10px 0 0 -5px #8b4513, inset 20px 0 0 -10px #a0522d;
+}
+
+.fortune-slip {
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  opacity: 0;
+  background-color: white;
+  padding: 10px 20px;
+  border: 2px solid #d2691e;
+  border-radius: 5px;
+  transition: transform 0.5s 0.5s, opacity 0.5s 0.5s;
+  font-weight: bold;
+}
+
+button {
+  margin-top: 25px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.cracked .cookie-left {
+  transform: rotate(-15deg);
+  left: -50px;
+  box-shadow: inset -10px 0 0 -5px #8b4513, inset -20px 0 0 -10px #a0522d, inset -5px -10px 10px -10px #8b4513, inset -15px -10px 10px -20px #a0522d;
+}
+
+.cracked .cookie-right {
+  transform: rotate(15deg);
+  left: 150px;
+  box-shadow: inset 10px 0 0 -5px #8b4513, inset 20px 0 0 -10px #a0522d, inset 5px -10px 10px -10px #8b4513, inset 15px -10px 10px -20px #a0522d;
+}
+
+.cracked+.fortune-slip {
+  transform: translate(-50%, -50%) scale(1.2);
+  opacity: 1;
+}
