--- a/static/css/style.css
+++ b/static/css/style.css
@@ -232,9 +232,9 @@ body {
   width: 200px;
   height: 100px;
   top: 42%;
-  left: 5%;
+  left: 10%;
   cursor: pointer;
-  transform: translate(-50%, -50%) scale(0);
+  /* transform: translate(-50%, -50%) scale(0); */
 }
 
 .cookie-left {
