--- a/static/css/style.css
+++ b/static/css/style.css
@@ -228,7 +228,7 @@ body {
 }
 
 .fortune-cookie {
-  position: relative;
+  position: absolute;
   align-items: center;
   width: 200px;
   height: 100px;
