--- a/static/css/style.css
+++ b/static/css/style.css
@@ -266,13 +266,13 @@ body {
   position: absolute;
   top: 48%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0) rotate(0deg);
   opacity: 0;
   background-color: white;
   padding: 10px 20px;
   border: 2px solid #d2691e;
   border-radius: 5px;
-  transition: transform 0.5s 0.5s, opacity 0.5s 0.5s;
+  transition: transform 1s 1s, opacity 1s 1s;
   font-weight: bold;
 }
 
@@ -289,6 +289,6 @@ body {
 }
 
 .cracked+.fortune-slip {
-  transform: translate(-50%, -50%) scale(1.2);
+  transform: translate(-50%, -50%) scale(1.2) rotate(360deg);
   opacity: 1;
 }
