--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,3 +292,15 @@ body {
   transform: translate(-50%, -50%) scale(1.2) rotate(360deg);
   opacity: 1;
 }
+
+@keyframes shake {
+  0% { transform: rotate(0deg); }
+  25% { transform: rotate(-10deg); }
+  50% { transform: rotate(10deg); }
+  75% { transform: rotate(-10deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.shaking {
+  animation: shake 0.5s ease-in-out infinite; /* Adjust the duration and timing function as needed */
+}
