--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,8 @@ body {
   border-radius: 5px;
   transition: transform 1s 1s, opacity 1s 1s;
   font-weight: bold;
+  z-index: 1000; /* Ensure this is higher than other elements */
+
 }
 
 .cracked+.fortune-slip {
