--- a/static/css/style.css
+++ b/static/css/style.css
@@ -248,11 +248,13 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
+  text-align: center;
+  max-width: 80%;
   opacity: 0;
   background-color: white;
   padding: 10px 20px;
   border: 2px solid #d2691e;
-  border-radius: 5px;
+  border-radius: 10px;
   font-weight: bold;
   color: black;
   z-index: 1000;
